# ChessGame

./: CMakeLists.txt  main.cpp
includes/GUI/: Button.h  IGameMode.h  IGuiFacade.h  IMouse.h  MainScreen.h  PlayGameMode.h  SFMLGuiFacade.h  SFMLMouse.h  WelcomeGameMode.h
includes/core/: Board.h  Main.h
sources/GUI/: Button.cpp  GameMode.cpp  MainScreen.cpp  PlayGameMode.cpp  SFMLGuiFacade.cpp  SFMLMouse.cpp  WelcomeGameMode.cpp
sources/core/: Main.cpp
